// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWebPackConfig getCommon sends proper stuff depending on isDev 1`] = `
Object {
  "context": "/foo/bar",
  "devtool": "source-map",
  "mode": "production",
  "name": "config1",
  "target": "web",
  "watch": false,
}
`;

exports[`CreateWebPackConfig getCommon sends proper stuff depending on isDev 2`] = `
Object {
  "context": "/foo/bar",
  "devtool": "inline-source-map",
  "mode": "development",
  "name": "config1",
  "target": "web",
  "watch": true,
}
`;

exports[`CreateWebPackConfig getModule matches snapshot 1`] = `
Object {
  "rules": Array [
    Object {
      "exclude": /\\(node_modules\\|bower_components\\)/,
      "test": /\\\\\\.m\\?jsx\\?\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
          "options": Object {
            "presets": Array [
              Array [
                "@wpackio/base",
                Object {
                  "hasFlow": false,
                  "hasReact": true,
                },
              ],
            ],
          },
        },
      ],
    },
    Object {
      "exclude": /\\(node_modules\\)/,
      "test": /\\\\\\.tsx\\?\\$/,
      "use": Array [
        Object {
          "loader": "babel-loader",
          "options": Object {
            "presets": Array [
              Array [
                "@wpackio/base",
                Object {
                  "hasReact": true,
                },
              ],
              Array [
                "@babel/preset-typescript",
              ],
            ],
          },
        },
      ],
    },
    Object {
      "test": /\\\\\\.\\(sa\\|sc\\|c\\)ss\\$/,
      "use": Array [
        "style-loader",
        Object {
          "loader": "css-loader",
          "options": Object {
            "importLoaders": 1,
            "sourceMap": true,
          },
        },
        "postcss-loader",
        Object {
          "loader": "sass-loader",
          "options": Object {
            "sourceMap": true,
          },
        },
      ],
    },
    Object {
      "test": /\\\\\\.\\(woff\\|woff2\\|eot\\|ttf\\|otf\\|svg\\|png\\|jpg\\|gif\\)\\(\\\\\\?v=\\\\d\\+\\\\\\.\\\\d\\+\\\\\\.\\\\d\\+\\)\\?\\$/,
      "use": Array [
        Object {
          "loader": "file-loader",
          "options": Object {
            "name": "asset-[hash].[ext]",
            "outputPath": "config1/assets/",
          },
        },
      ],
    },
  ],
}
`;

exports[`CreateWebPackConfig getOptimization returns object when in use 1`] = `
Object {
  "splitChunks": Object {
    "chunks": "all",
  },
}
`;

exports[`CreateWebPackConfig getPlugins has proper plugins for build mode 1`] = `
Array [
  DefinePlugin {
    "definitions": Object {
      "process.env.BABEL_ENV": "\\"production\\"",
      "process.env.NODE_ENV": "\\"production\\"",
    },
  },
  CleanWebpackPlugin {
    "options": Object {
      "allowExternal": false,
      "dry": false,
      "root": "/foo/bar",
      "verbose": false,
    },
    "paths": Array [
      "/foo/bar/dist/config1",
    ],
  },
  MiniCssExtractPlugin {
    "options": Object {
      "chunkFilename": "config1/[name].css",
      "filename": "config1/[name].css",
    },
  },
  Object {},
  BannerPlugin {
    "banner": [Function],
    "options": Object {
      "banner": "
WordPress WebPack Bundler

@author Swashata Ghosh
@version 1.0.0
@link https://wpack.io
@license GPL-3.0

Copyright (c) 2018 Swashata Ghosh

This software is released under the GPL-3.0 License
https://opensource.org/licenses/GPL-3.0

Compiled with the help of https://wpack.io
A zero setup Webpack Bundler Script for WordPress",
      "entryOnly": false,
      "include": /\\\\\\.\\(\\(t\\|j\\)sx\\?\\|s\\?\\(c\\|a\\)ss\\)\\$/,
      "raw": false,
    },
  },
]
`;

exports[`CreateWebPackConfig getPlugins has proper plugins for dev mode 1`] = `
Array [
  DefinePlugin {
    "definitions": Object {
      "process.env.BABEL_ENV": "\\"development\\"",
      "process.env.NODE_ENV": "\\"development\\"",
    },
  },
  CleanWebpackPlugin {
    "options": Object {
      "allowExternal": false,
      "dry": false,
      "root": "/foo/bar",
      "verbose": false,
    },
    "paths": Array [
      "/foo/bar/dist/config1",
    ],
  },
  MiniCssExtractPlugin {
    "options": Object {
      "chunkFilename": "config1/[name].css",
      "filename": "config1/[name].css",
    },
  },
  Object {},
  HotModuleReplacementPlugin {
    "fullBuildTimeout": 200,
    "multiStep": undefined,
    "options": Object {},
    "requestTimeout": 10000,
  },
]
`;
